// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`crop-test > DaVinci snapshot (crop + Ken Burns via adjust-transform) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1920" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Cross Dissolve" uid="FxPlug:4731E73A-8DAC-4113-9A30-AE85B1761265" />
        <effect id="r4" name="Audio Cross Fade" uid="FFAudioTransition" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/landscape.mp4" />
        </asset>
        <asset id="asset-2" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/portrait-misoriented.mp4" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="crop-test">
                <sequence format="r1" duration="600/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="0/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="No Crop" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">No Crop</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="32" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="3" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="150/30s" duration="150/30s" start="150/30s" tcFormat="NDF">
                        <adjust-transform position="0 0" scale="1.6667 1.6667" />
                        <title ref="r2" lane="1" name="Static Crop" offset="150/30s" duration="135/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="center">Static Crop</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="32" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="3" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="292/30s" duration="16/30s">
                        <filter-video ref="r3" name="Cross Dissolve" />
                        <filter-audio ref="r4" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="300/30s" duration="150/30s" start="600/30s" tcFormat="NDF">
                        <adjust-transform position="0 0" scale="3.3333 3.3333" />
                        <title ref="r2" lane="1" name="Ken Burns" offset="600/30s" duration="135/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="center">Ken Burns</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="32" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="3" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="442/30s" duration="16/30s">
                        <filter-video ref="r3" name="Cross Dissolve" />
                        <filter-audio ref="r4" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="450/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <adjust-transform position="0 0" scale="3.3333 3.3333" />
                        <title ref="r2" lane="1" name="Ken Burns (cropEnd only)" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts4" alignment="center">Ken Burns (cropEnd only)</text-style>
                            </text>
                            <text-style-def id="ts4">
                                <text-style font="Helvetica Neue" fontSize="32" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="3" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`crop-test > FCP snapshot (crop + Ken Burns via pan mode) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1920" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Cross Dissolve" uid="FxPlug:4731E73A-8DAC-4113-9A30-AE85B1761265" />
        <effect id="r4" name="Audio Cross Fade" uid="FFAudioTransition" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/landscape.mp4" />
        </asset>
        <asset id="asset-2" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/portrait-misoriented.mp4" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="crop-test">
                <sequence format="r1" duration="600/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="0/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="No Crop" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">No Crop</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="150/30s" duration="150/30s" start="150/30s" tcFormat="NDF">
                        <adjust-crop mode="crop">
                            <crop-rect left="20" top="15" right="20" bottom="15" />
                        </adjust-crop>
                        <title ref="r2" lane="1" name="Static Crop" offset="150/30s" duration="135/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="center">Static Crop</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="292/30s" duration="16/30s">
                        <filter-video ref="r3" name="Cross Dissolve" />
                        <filter-audio ref="r4" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="300/30s" duration="150/30s" start="600/30s" tcFormat="NDF">
                        <adjust-crop mode="pan">
                            <pan-rect left="0" top="0" right="0" bottom="0" />
                            <pan-rect left="35" top="30" right="35" bottom="30" />
                        </adjust-crop>
                        <title ref="r2" lane="1" name="Ken Burns" offset="600/30s" duration="135/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="center">Ken Burns</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="442/30s" duration="16/30s">
                        <filter-video ref="r3" name="Cross Dissolve" />
                        <filter-audio ref="r4" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="450/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <adjust-crop mode="pan">
                            <pan-rect left="0" top="0" right="0" bottom="0" />
                            <pan-rect left="35" top="30" right="35" bottom="30" />
                        </adjust-crop>
                        <title ref="r2" lane="1" name="Ken Burns (cropEnd only)" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts4" alignment="center">Ken Burns (cropEnd only)</text-style>
                            </text>
                            <text-style-def id="ts4">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`music-test > DaVinci snapshot (auto-loop alternating lanes) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1920" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Cross Dissolve" uid="FxPlug:4731E73A-8DAC-4113-9A30-AE85B1761265" />
        <effect id="r4" name="Audio Cross Fade" uid="FFAudioTransition" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/landscape.mp4" />
        </asset>
        <asset id="asset-2" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/portrait-misoriented.mp4" />
        </asset>
        <asset id="audio-asset-1" start="0/1s" duration="5760000/48000s" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000">
            <media-rep kind="original-media" src="file:///fixtures/output/music-long.wav" />
        </asset>
        <asset id="audio-asset-2" start="0/1s" duration="240000/48000s" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000">
            <media-rep kind="original-media" src="file:///fixtures/output/music-short.wav" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="music-test">
                <sequence format="r1" duration="900/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="0/30s" duration="300/30s" start="0/30s" tcFormat="NDF">

                        <adjust-volume amount="-6dB"/>
                        <title ref="r2" lane="1" name="Music (no loop)" offset="0/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">Music (no loop)</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="32" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="3" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <asset-clip ref="audio-asset-1" lane="-1" name="music-long.wav" offset="0/30s" duration="300/30s" start="0/30s">

                            <adjust-volume amount="-8dB">
                                <param name="amount" value="-8dB">
                                    <fadeIn type="linear" duration="30/30s"/>
                                    <fadeOut type="linear" duration="30/30s"/>
                                </param>
                            </adjust-volume>
                        </asset-clip>
                    </asset-clip>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="300/30s" duration="300/30s" start="0/30s" tcFormat="NDF">

                        <adjust-volume amount="-6dB"/>
                        <title ref="r2" lane="1" name="Short music (auto-loop)" offset="0/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="center">Short music (auto-loop)</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="32" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="3" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <asset-clip ref="audio-asset-2" lane="-1" name="music-short.wav" offset="0/30s" duration="150/30s" start="0/30s">

                            <adjust-volume amount="-10dB">
                                <param name="amount" value="-10dB">
                                    <fadeIn type="linear" duration="60/30s"/>
                                    <fadeOut type="linear" duration="30/30s"/>
                                </param>
                            </adjust-volume>
                        </asset-clip>
                        <asset-clip ref="audio-asset-2" lane="-2" name="music-short.wav" offset="120/30s" duration="150/30s" start="0/30s">

                            <adjust-volume amount="-10dB">
                                <param name="amount" value="-10dB">
                                    <fadeIn type="linear" duration="30/30s"/>
                                    <fadeOut type="linear" duration="30/30s"/>
                                </param>
                            </adjust-volume>
                        </asset-clip>
                        <asset-clip ref="audio-asset-2" lane="-1" name="music-short.wav" offset="240/30s" duration="150/30s" start="0/30s">

                            <adjust-volume amount="-10dB">
                                <param name="amount" value="-10dB">
                                    <fadeIn type="linear" duration="30/30s"/>
                                    <fadeOut type="linear" duration="30/30s"/>
                                </param>
                            </adjust-volume>
                        </asset-clip>
                    </asset-clip>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="600/30s" duration="300/30s" start="300/30s" tcFormat="NDF">

                        <adjust-volume amount="-6dB"/>
                        <title ref="r2" lane="1" name="Short music (auto-loop cont.)" offset="300/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="center">Short music (auto-loop cont.)</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="32" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="3" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <asset-clip ref="audio-asset-2" lane="-2" name="music-short.wav" offset="360/30s" duration="150/30s" start="0/30s">

                            <adjust-volume amount="-10dB">
                                <param name="amount" value="-10dB">
                                    <fadeIn type="linear" duration="30/30s"/>
                                    <fadeOut type="linear" duration="30/30s"/>
                                </param>
                            </adjust-volume>
                        </asset-clip>
                        <asset-clip ref="audio-asset-2" lane="-1" name="music-short.wav" offset="480/30s" duration="120/30s" start="0/30s">

                            <adjust-volume amount="-10dB">
                                <param name="amount" value="-10dB">
                                    <fadeIn type="linear" duration="30/30s"/>
                                    <fadeOut type="linear" duration="60/30s"/>
                                </param>
                            </adjust-volume>
                        </asset-clip>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`music-test > FCP snapshot (volume, fades, auto-loop spine) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1920" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Cross Dissolve" uid="FxPlug:4731E73A-8DAC-4113-9A30-AE85B1761265" />
        <effect id="r4" name="Audio Cross Fade" uid="FFAudioTransition" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/landscape.mp4" />
        </asset>
        <asset id="asset-2" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/portrait-misoriented.mp4" />
        </asset>
        <asset id="audio-asset-1" start="0/1s" duration="5760000/48000s" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000">
            <media-rep kind="original-media" src="file:///fixtures/output/music-long.wav" />
        </asset>
        <asset id="audio-asset-2" start="0/1s" duration="240000/48000s" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000">
            <media-rep kind="original-media" src="file:///fixtures/output/music-short.wav" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="music-test">
                <sequence format="r1" duration="900/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="0/30s" duration="300/30s" start="0/30s" tcFormat="NDF">

                        <adjust-volume amount="-6dB"/>
                        <title ref="r2" lane="1" name="Music (no loop)" offset="0/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">Music (no loop)</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <asset-clip ref="audio-asset-1" lane="-1" name="music-long.wav" offset="0/30s" duration="300/30s" start="0/30s">

                            <adjust-volume amount="-8dB">
                                <param name="amount" value="-8dB">
                                    <fadeIn type="linear" duration="30/30s"/>
                                    <fadeOut type="linear" duration="30/30s"/>
                                </param>
                            </adjust-volume>
                        </asset-clip>
                    </asset-clip>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="300/30s" duration="300/30s" start="0/30s" tcFormat="NDF">

                        <adjust-volume amount="-6dB"/>
                        <title ref="r2" lane="1" name="Short music (auto-loop)" offset="0/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="center">Short music (auto-loop)</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <spine lane="-1" offset="0/30s">
                            <asset-clip ref="audio-asset-2" name="music-short.wav" offset="0/30s" duration="135/30s" start="0/30s">

                                <adjust-volume amount="-10dB">
                                    <param name="amount" value="-10dB">
                                        <fadeIn type="linear" duration="60/30s"/>
                                    </param>
                                </adjust-volume>
                            </asset-clip>
                            <transition name="Cross Dissolve" offset="120/30s" duration="30/30s">
                                <filter-video ref="r3" name="Cross Dissolve" />
                                <filter-audio ref="r4" name="Audio Cross Fade" />
                            </transition>
                            <asset-clip ref="audio-asset-2" name="music-short.wav" offset="135/30s" duration="120/30s" start="15/30s">

                                <adjust-volume amount="-10dB"/>
                            </asset-clip>
                            <transition name="Cross Dissolve" offset="240/30s" duration="30/30s">
                                <filter-video ref="r3" name="Cross Dissolve" />
                                <filter-audio ref="r4" name="Audio Cross Fade" />
                            </transition>
                            <asset-clip ref="audio-asset-2" name="music-short.wav" offset="255/30s" duration="120/30s" start="15/30s">

                                <adjust-volume amount="-10dB"/>
                            </asset-clip>
                            <transition name="Cross Dissolve" offset="360/30s" duration="30/30s">
                                <filter-video ref="r3" name="Cross Dissolve" />
                                <filter-audio ref="r4" name="Audio Cross Fade" />
                            </transition>
                            <asset-clip ref="audio-asset-2" name="music-short.wav" offset="375/30s" duration="120/30s" start="15/30s">

                                <adjust-volume amount="-10dB"/>
                            </asset-clip>
                            <transition name="Cross Dissolve" offset="480/30s" duration="30/30s">
                                <filter-video ref="r3" name="Cross Dissolve" />
                                <filter-audio ref="r4" name="Audio Cross Fade" />
                            </transition>
                            <asset-clip ref="audio-asset-2" name="music-short.wav" offset="495/30s" duration="105/30s" start="15/30s">

                                <adjust-volume amount="-10dB">
                                    <param name="amount" value="-10dB">
                                        <fadeOut type="linear" duration="60/30s"/>
                                    </param>
                                </adjust-volume>
                            </asset-clip>
                        </spine>
                    </asset-clip>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="600/30s" duration="300/30s" start="300/30s" tcFormat="NDF">

                        <adjust-volume amount="-6dB"/>
                        <title ref="r2" lane="1" name="Short music (auto-loop cont.)" offset="300/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="center">Short music (auto-loop cont.)</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`overlay-test > DaVinci snapshot (1x font size) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1920" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Essential Fade" uid=".../Titles.localized/Essential Titles.localized/Essential Fade.localized/Essential Fade.moti" />
        <effect id="r4" name="Essential Scale" uid=".../Titles.localized/Essential Titles.localized/Essential Scale.localized/Essential Scale.moti" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/landscape.mp4" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="overlay-test.1080p">
                <sequence format="r1" duration="300/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="0/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Center Title Line 2" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">Center Title
Line 2</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="80" fontFace="Regular" fontColor="1 1 1 1" bold="1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="8" />
                            </text-style-def>
                            <adjust-transform position="0 5.7778" />
                        </title>
                        <title ref="r2" lane="2" name="Top Left" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="left">Top Left</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform position="-85.1852 45.5407" />
                        </title>
                        <title ref="r2" lane="3" name="Top Right" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="right">Top Right</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform position="85.1852 45.5407" />
                        </title>
                        <title ref="r2" lane="4" name="Bottom Left Line 2" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts4" alignment="left">Bottom Left
Line 2</text-style>
                            </text>
                            <text-style-def id="ts4">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform position="-85.1852 -35.6296" />
                        </title>
                        <title ref="r2" lane="5" name="Bottom Center" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts5" alignment="center">Bottom Center</text-style>
                            </text>
                            <text-style-def id="ts5">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <title ref="r2" lane="6" name="Bottom Right" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts6" alignment="right">Bottom Right</text-style>
                            </text>
                            <text-style-def id="ts6">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform position="85.1852 -40.963" />
                        </title>
                    </asset-clip>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="150/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r3" lane="1" name="Fade Title" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts7" alignment="center">Fade Title</text-style>
                            </text>
                            <text-style-def id="ts7">
                                <text-style font="Helvetica Neue" fontSize="80" fontFace="Regular" fontColor="1 1 1 1" bold="1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="8" />
                            </text-style-def>
                            <adjust-transform position="0 1.3333" />
                        </title>
                        <title ref="r2" lane="2" name="Slide Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts8" alignment="left">Slide Subtitle</text-style>
                            </text>
                            <text-style-def id="ts8">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform>
                                <param name="position">
                                    <keyframeAnimation>
                                        <keyframe time="0/1s" value="-85.1852 55.6667" interp="linear"/>
                                        <keyframe time="9/30s" value="-85.1852 45.5407"/>
                                        <keyframe time="141/30s" value="-85.1852 45.5407" interp="linear"/>
                                        <keyframe time="150/30s" value="-85.1852 55.6667"/>
                                    </keyframeAnimation>
                                </param>
                            </adjust-transform>
                        </title>
                        <title ref="r4" lane="3" name="Pop Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts9" alignment="right">Pop Subtitle</text-style>
                            </text>
                            <text-style-def id="ts9">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform position="85.1852 45.5407" />
                        </title>
                        <title ref="r3" lane="4" name="Fade Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts10" alignment="left">Fade Subtitle</text-style>
                            </text>
                            <text-style-def id="ts10">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform position="-85.1852 -40.963" />
                        </title>
                        <title ref="r2" lane="5" name="Slide Caption" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts11" alignment="center">Slide Caption</text-style>
                            </text>
                            <text-style-def id="ts11">
                                <text-style font="Helvetica Neue" fontSize="32" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="3" />
                            </text-style-def>
                            <adjust-transform>
                                <param name="position">
                                    <keyframeAnimation>
                                        <keyframe time="0/1s" value="0 -54.7778" interp="linear"/>
                                        <keyframe time="9/30s" value="0 -40.963"/>
                                        <keyframe time="141/30s" value="0 -40.963" interp="linear"/>
                                        <keyframe time="150/30s" value="0 -54.7778"/>
                                    </keyframeAnimation>
                                </param>
                            </adjust-transform>
                        </title>
                        <title ref="r4" lane="6" name="Pop Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts12" alignment="right">Pop Subtitle</text-style>
                            </text>
                            <text-style-def id="ts12">
                                <text-style font="Helvetica Neue" fontSize="48" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="1 1" shadowBlurRadius="5" />
                            </text-style-def>
                            <adjust-transform position="85.1852 -40.963" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`overlay-test > FCP snapshot (positions + animations, 1080p) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1920" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Essential Fade" uid=".../Titles.localized/Essential Titles.localized/Essential Fade.localized/Essential Fade.moti" />
        <effect id="r4" name="Essential Scale" uid=".../Titles.localized/Essential Titles.localized/Essential Scale.localized/Essential Scale.moti" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/landscape.mp4" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="overlay-test.1080p">
                <sequence format="r1" duration="300/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="0/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Center Title Line 2" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">Center Title
Line 2</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="160" fontFace="Regular" fontColor="1 1 1 1" bold="1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="4 4" shadowBlurRadius="16" />
                            </text-style-def>
                            <adjust-transform position="0 5.7778" />
                        </title>
                        <title ref="r2" lane="2" name="Top Left" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="left">Top Left</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform position="-85.1852 45.5407" />
                        </title>
                        <title ref="r2" lane="3" name="Top Right" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="right">Top Right</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform position="85.1852 45.5407" />
                        </title>
                        <title ref="r2" lane="4" name="Bottom Left Line 2" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts4" alignment="left">Bottom Left
Line 2</text-style>
                            </text>
                            <text-style-def id="ts4">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform position="-85.1852 -35.6296" />
                        </title>
                        <title ref="r2" lane="5" name="Bottom Center" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts5" alignment="center">Bottom Center</text-style>
                            </text>
                            <text-style-def id="ts5">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <title ref="r2" lane="6" name="Bottom Right" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts6" alignment="right">Bottom Right</text-style>
                            </text>
                            <text-style-def id="ts6">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform position="85.1852 -40.963" />
                        </title>
                    </asset-clip>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="150/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r3" lane="1" name="Fade Title" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts7" alignment="center">Fade Title</text-style>
                            </text>
                            <text-style-def id="ts7">
                                <text-style font="Helvetica Neue" fontSize="160" fontFace="Regular" fontColor="1 1 1 1" bold="1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="4 4" shadowBlurRadius="16" />
                            </text-style-def>
                            <adjust-transform position="0 1.3333" />
                        </title>
                        <title ref="r2" lane="2" name="Slide Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts8" alignment="left">Slide Subtitle</text-style>
                            </text>
                            <text-style-def id="ts8">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform>
                                <param name="position">
                                    <keyframeAnimation>
                                        <keyframe time="0/1s" value="-85.1852 55.6667" interp="linear"/>
                                        <keyframe time="9/30s" value="-85.1852 45.5407"/>
                                        <keyframe time="141/30s" value="-85.1852 45.5407" interp="linear"/>
                                        <keyframe time="150/30s" value="-85.1852 55.6667"/>
                                    </keyframeAnimation>
                                </param>
                            </adjust-transform>
                        </title>
                        <title ref="r4" lane="3" name="Pop Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts9" alignment="right">Pop Subtitle</text-style>
                            </text>
                            <text-style-def id="ts9">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform position="85.1852 45.5407" />
                        </title>
                        <title ref="r3" lane="4" name="Fade Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts10" alignment="left">Fade Subtitle</text-style>
                            </text>
                            <text-style-def id="ts10">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform position="-85.1852 -40.963" />
                        </title>
                        <title ref="r2" lane="5" name="Slide Caption" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts11" alignment="center">Slide Caption</text-style>
                            </text>
                            <text-style-def id="ts11">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform>
                                <param name="position">
                                    <keyframeAnimation>
                                        <keyframe time="0/1s" value="0 -54.7778" interp="linear"/>
                                        <keyframe time="9/30s" value="0 -40.963"/>
                                        <keyframe time="141/30s" value="0 -40.963" interp="linear"/>
                                        <keyframe time="150/30s" value="0 -54.7778"/>
                                    </keyframeAnimation>
                                </param>
                            </adjust-transform>
                        </title>
                        <title ref="r4" lane="6" name="Pop Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts12" alignment="right">Pop Subtitle</text-style>
                            </text>
                            <text-style-def id="ts12">
                                <text-style font="Helvetica Neue" fontSize="96" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="10" />
                            </text-style-def>
                            <adjust-transform position="85.1852 -40.963" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`overlay-test > FCP snapshot (positions + animations, 1080s) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1080" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <format id="r5" name="FFVideoFormat1920p30" frameDuration="1/30s" width="1080" height="1920" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Essential Fade" uid=".../Titles.localized/Essential Titles.localized/Essential Fade.localized/Essential Fade.moti" />
        <effect id="r4" name="Essential Scale" uid=".../Titles.localized/Essential Titles.localized/Essential Scale.localized/Essential Scale.moti" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r5">
            <media-rep kind="original-media" src="file:///fixtures/output/portrait.mp4" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="overlay-test.1080s">
                <sequence format="r1" duration="300/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="portrait.mp4" offset="0/30s" duration="150/30s" start="300/30s" format="r5" tcFormat="NDF">
                        <adjust-conform type="fill" />
                        <title ref="r2" lane="1" name="Center Title Line 2" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">Center Title
Line 2</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" bold="1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 4.4444" scale="0.86 0.86" />
                        </title>
                        <title ref="r2" lane="2" name="Top Left" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="left">Top Left</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="-46.2963 43.7185" scale="0.516 0.516" />
                        </title>
                        <title ref="r2" lane="3" name="Top Right" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="right">Top Right</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="46.2963 43.7185" scale="0.516 0.516" />
                        </title>
                        <title ref="r2" lane="4" name="B-Left Line 2" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts4" alignment="left">B-Left
Line 2</text-style>
                            </text>
                            <text-style-def id="ts4">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="-46.2963 -38.3852" scale="0.516 0.516" />
                        </title>
                        <title ref="r2" lane="5" name="Bottom" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts5" alignment="center">Bottom</text-style>
                            </text>
                            <text-style-def id="ts5">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -43.7185" scale="0.516 0.516" />
                        </title>
                        <title ref="r2" lane="6" name="B-Right" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts6" alignment="right">B-Right</text-style>
                            </text>
                            <text-style-def id="ts6">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="46.2963 -43.7185" scale="0.516 0.516" />
                        </title>
                    </asset-clip>
                    <asset-clip ref="asset-1" name="portrait.mp4" offset="150/30s" duration="150/30s" start="300/30s" format="r5" tcFormat="NDF">
                        <adjust-conform type="fill" />
                        <title ref="r3" lane="1" name="Fade Title" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts7" alignment="center">Fade Title</text-style>
                            </text>
                            <text-style-def id="ts7">
                                <text-style font="Helvetica Neue" fontSize="160" fontFace="Regular" fontColor="1 1 1 1" bold="1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="4 4" shadowBlurRadius="16" />
                            </text-style-def>
                            <adjust-transform position="0 0" />
                        </title>
                        <title ref="r2" lane="2" name="Slide Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts8" alignment="left">Slide Subtitle</text-style>
                            </text>
                            <text-style-def id="ts8">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform scale="0.516 0.516">
                                <param name="position">
                                    <keyframeAnimation>
                                        <keyframe time="0/1s" value="-46.2963 55.6667" interp="linear"/>
                                        <keyframe time="9/30s" value="-46.2963 43.7185"/>
                                        <keyframe time="141/30s" value="-46.2963 43.7185" interp="linear"/>
                                        <keyframe time="150/30s" value="-46.2963 55.6667"/>
                                    </keyframeAnimation>
                                </param>
                            </adjust-transform>
                        </title>
                        <title ref="r4" lane="3" name="Pop Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts9" alignment="right">Pop Subtitle</text-style>
                            </text>
                            <text-style-def id="ts9">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="46.2963 43.7185" scale="0.516 0.516" />
                        </title>
                        <title ref="r3" lane="4" name="Fade BL" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts10" alignment="left">Fade BL</text-style>
                            </text>
                            <text-style-def id="ts10">
                                <text-style font="Helvetica Neue" fontSize="160" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="4 4" shadowBlurRadius="16" />
                            </text-style-def>
                            <adjust-transform position="-46.2963 -43.7185" scale="0.6 0.6" />
                        </title>
                        <title ref="r2" lane="5" name="Slide BC" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts11" alignment="center">Slide BC</text-style>
                            </text>
                            <text-style-def id="ts11">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform scale="0.344 0.344">
                                <param name="position">
                                    <keyframeAnimation>
                                        <keyframe time="0/1s" value="0 -54.7778" interp="linear"/>
                                        <keyframe time="9/30s" value="0 -44.9037"/>
                                        <keyframe time="141/30s" value="0 -44.9037" interp="linear"/>
                                        <keyframe time="150/30s" value="0 -54.7778"/>
                                    </keyframeAnimation>
                                </param>
                            </adjust-transform>
                        </title>
                        <title ref="r4" lane="6" name="Pop BR" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts12" alignment="right">Pop BR</text-style>
                            </text>
                            <text-style-def id="ts12">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="46.2963 -43.7185" scale="0.516 0.516" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`overlay-test > FCP snapshot (positions + animations, 1080v) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1920p30" frameDuration="1/30s" width="1080" height="1920" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Essential Fade" uid=".../Titles.localized/Essential Titles.localized/Essential Fade.localized/Essential Fade.moti" />
        <effect id="r4" name="Essential Scale" uid=".../Titles.localized/Essential Titles.localized/Essential Scale.localized/Essential Scale.moti" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/portrait.mp4" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="overlay-test.1080v">
                <sequence format="r1" duration="300/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="portrait.mp4" offset="0/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <adjust-conform type="fill" />
                        <title ref="r2" lane="1" name="Center Title Line 2" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">Center Title
Line 2</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" bold="1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 2.5" scale="0.74 0.74" />
                        </title>
                        <title ref="r2" lane="2" name="Top Left" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="left">Top Left</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="-26.0417 46.2167" scale="0.444 0.444" />
                        </title>
                        <title ref="r2" lane="3" name="Top Right" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="right">Top Right</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="26.0417 46.2167" scale="0.444 0.444" />
                        </title>
                        <title ref="r2" lane="4" name="B-Left Line 2" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts4" alignment="left">B-Left
Line 2</text-style>
                            </text>
                            <text-style-def id="ts4">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="-26.0417 -43.2167" scale="0.444 0.444" />
                        </title>
                        <title ref="r2" lane="5" name="Bottom" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts5" alignment="center">Bottom</text-style>
                            </text>
                            <text-style-def id="ts5">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -46.2167" scale="0.444 0.444" />
                        </title>
                        <title ref="r2" lane="6" name="B-Right" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts6" alignment="right">B-Right</text-style>
                            </text>
                            <text-style-def id="ts6">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="26.0417 -46.2167" scale="0.444 0.444" />
                        </title>
                    </asset-clip>
                    <asset-clip ref="asset-1" name="portrait.mp4" offset="150/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <adjust-conform type="fill" />
                        <title ref="r3" lane="1" name="Fade Title" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts7" alignment="center">Fade Title</text-style>
                            </text>
                            <text-style-def id="ts7">
                                <text-style font="Helvetica Neue" fontSize="90" fontFace="Regular" fontColor="1 1 1 1" bold="1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="9" />
                            </text-style-def>
                            <adjust-transform position="0 0" />
                        </title>
                        <title ref="r2" lane="2" name="Slide Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts8" alignment="left">Slide Subtitle</text-style>
                            </text>
                            <text-style-def id="ts8">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform scale="0.444 0.444">
                                <param name="position">
                                    <keyframeAnimation>
                                        <keyframe time="0/1s" value="-26.0417 54.5" interp="linear"/>
                                        <keyframe time="9/30s" value="-26.0417 46.2167"/>
                                        <keyframe time="141/30s" value="-26.0417 46.2167" interp="linear"/>
                                        <keyframe time="150/30s" value="-26.0417 54.5"/>
                                    </keyframeAnimation>
                                </param>
                            </adjust-transform>
                        </title>
                        <title ref="r4" lane="3" name="Pop Subtitle" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts9" alignment="right">Pop Subtitle</text-style>
                            </text>
                            <text-style-def id="ts9">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="26.0417 46.2167" scale="0.444 0.444" />
                        </title>
                        <title ref="r3" lane="4" name="Fade BL" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts10" alignment="left">Fade BL</text-style>
                            </text>
                            <text-style-def id="ts10">
                                <text-style font="Helvetica Neue" fontSize="90" fontFace="Regular" fontColor="1 1 1 1" alignment="left" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="9" />
                            </text-style-def>
                            <adjust-transform position="-26.0417 -46.2167" scale="0.6 0.6" />
                        </title>
                        <title ref="r2" lane="5" name="Slide BC" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts11" alignment="center">Slide BC</text-style>
                            </text>
                            <text-style-def id="ts11">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform scale="0.296 0.296">
                                <param name="position">
                                    <keyframeAnimation>
                                        <keyframe time="0/1s" value="0 -54" interp="linear"/>
                                        <keyframe time="9/30s" value="0 -46.8833"/>
                                        <keyframe time="141/30s" value="0 -46.8833" interp="linear"/>
                                        <keyframe time="150/30s" value="0 -54"/>
                                    </keyframeAnimation>
                                </param>
                            </adjust-transform>
                        </title>
                        <title ref="r4" lane="6" name="Pop BR" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts12" alignment="right">Pop BR</text-style>
                            </text>
                            <text-style-def id="ts12">
                                <text-style font="Helvetica Neue" fontSize="60" fontFace="Regular" fontColor="1 1 1 1" alignment="right" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="26.0417 -46.2167" scale="0.444 0.444" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`transition-test > FCP snapshot 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1920" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <effect id="r3" name="Cross Dissolve" uid="FxPlug:4731E73A-8DAC-4113-9A30-AE85B1761265" />
        <effect id="r4" name="Slide" uid="FxPlug:6AAB0D54-FCD8-4EBD-A62D-D352A5ED1648" />
        <effect id="r5" name="Wipe" uid="FxPlug:857E2FBA-98DB-411B-A88C-CE6ABC1F65D8" />
        <effect id="r6" name="Audio Cross Fade" uid="FFAudioTransition" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/landscape.mp4" />
        </asset>
        <asset id="asset-2" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/portrait-misoriented.mp4" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="transition-test">
                <sequence format="r1" duration="1650/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="0/30s" duration="150/30s" start="0/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Hard Cut" offset="0/30s" duration="120/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">Hard Cut</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="135/30s" duration="30/30s">
                        <filter-video ref="r3" name="Cross Dissolve" />
                        <filter-audio ref="r6" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="150/30s" duration="150/30s" start="150/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Fade" offset="150/30s" duration="120/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="center">Fade</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="285/30s" duration="30/30s">
                        <filter-video ref="r4" name="Slide">
                            <param name="Direction" key="4" value="2" />
                        </filter-video>
                        <filter-audio ref="r6" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="300/30s" duration="150/30s" start="15/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Slide from-left" offset="15/30s" duration="120/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="center">Slide from-left</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="435/30s" duration="30/30s">
                        <filter-video ref="r4" name="Slide">
                            <param name="Direction" key="4" value="0" />
                        </filter-video>
                        <filter-audio ref="r6" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="450/30s" duration="150/30s" start="150/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Slide from-right" offset="150/30s" duration="120/30s" start="0/1s">
                            <text>
                                <text-style ref="ts4" alignment="center">Slide from-right</text-style>
                            </text>
                            <text-style-def id="ts4">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="585/30s" duration="30/30s">
                        <filter-video ref="r4" name="Slide">
                            <param name="Direction" key="4" value="3" />
                        </filter-video>
                        <filter-audio ref="r6" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="600/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Slide from-top" offset="300/30s" duration="120/30s" start="0/1s">
                            <text>
                                <text-style ref="ts5" alignment="center">Slide from-top</text-style>
                            </text>
                            <text-style-def id="ts5">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="735/30s" duration="30/30s">
                        <filter-video ref="r4" name="Slide">
                            <param name="Direction" key="4" value="1" />
                        </filter-video>
                        <filter-audio ref="r6" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="750/30s" duration="150/30s" start="450/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Slide from-bottom" offset="450/30s" duration="120/30s" start="0/1s">
                            <text>
                                <text-style ref="ts6" alignment="center">Slide from-bottom</text-style>
                            </text>
                            <text-style-def id="ts6">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <transition offset="885/30s" duration="30/30s">
                        <filter-video ref="r5" name="Wipe">
                            <param name="Direction" key="13" value="2" />
                        </filter-video>
                        <filter-audio ref="r6" name="Audio Cross Fade" />
                    </transition>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="900/30s" duration="150/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Wipe from-left" offset="300/30s" duration="150/30s" start="0/1s">
                            <text>
                                <text-style ref="ts7" alignment="center">Wipe from-left</text-style>
                            </text>
                            <text-style-def id="ts7">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="1050/30s" duration="600/30s" start="600/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Slow-mo 0.5x" offset="600/30s" duration="600/30s" start="0/1s">
                            <text>
                                <text-style ref="ts8" alignment="center">Slow-mo 0.5x</text-style>
                            </text>
                            <text-style-def id="ts8">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;

exports[`voiceover-test > FCP snapshot (voiceover + background music) 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
    <resources>
        <format id="r1" name="FFVideoFormat1080p30" frameDuration="1/30s" width="1920" height="1080" colorSpace="1-1-1 (Rec. 709)" />
        <effect id="r2" name="Essential Title" uid=".../Titles.localized/Essential Titles.localized/Essential Title.localized/Essential Title.moti" />
        <asset id="asset-1" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/landscape.mp4" />
        </asset>
        <asset id="asset-2" start="0/1s" duration="900/30s" hasVideo="1" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000" format="r1">
            <media-rep kind="original-media" src="file:///fixtures/output/portrait-misoriented.mp4" />
        </asset>
        <asset id="audio-asset-1" start="0/1s" duration="5760000/48000s" hasAudio="1" audioSources="1" audioChannels="2" audioRate="48000">
            <media-rep kind="original-media" src="file:///fixtures/output/music-long.wav" />
        </asset>
        <asset id="vo-asset-1" start="0/1s" duration="2016000/48000s" hasAudio="1" audioSources="1" audioChannels="1" audioRate="48000">
            <media-rep kind="original-media" src="file:///fixtures/output/narration.wav" />
        </asset>
    </resources>
    <library>
        <event name="Montai Export">
            <project name="voiceover-test">
                <sequence format="r1" duration="900/30s" tcStart="0/1s" tcFormat="NDF">
                    <spine>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="0/30s" duration="300/30s" start="0/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Voiceover segment 1" offset="0/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts1" alignment="center">Voiceover segment 1</text-style>
                            </text>
                            <text-style-def id="ts1">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <asset-clip ref="audio-asset-1" lane="-1" name="music-long.wav" offset="0/30s" duration="900/30s" start="0/30s">

                            <adjust-volume amount="-16dB">
                                <param name="amount" value="-16dB">
                                    <fadeIn type="linear" duration="60/30s"/>
                                    <fadeOut type="linear" duration="60/30s"/>
                                </param>
                            </adjust-volume>
                        </asset-clip>
                        <asset-clip ref="vo-asset-1" lane="-2" name="narration.wav" offset="0/30s" duration="225/30s" start="75/30s" />
                    </asset-clip>
                    <asset-clip ref="asset-2" name="portrait-misoriented.mp4" offset="300/30s" duration="300/30s" start="0/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Voiceover segment 2" offset="0/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts2" alignment="center">Voiceover segment 2</text-style>
                            </text>
                            <text-style-def id="ts2">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                        <asset-clip ref="vo-asset-1" lane="-3" name="narration.wav" offset="30/30s" duration="210/30s" start="450/30s" />
                    </asset-clip>
                    <asset-clip ref="asset-1" name="landscape.mp4" offset="600/30s" duration="300/30s" start="300/30s" tcFormat="NDF">
                        <title ref="r2" lane="1" name="Music only (no voiceover)" offset="300/30s" duration="300/30s" start="0/1s">
                            <text>
                                <text-style ref="ts3" alignment="center">Music only (no voiceover)</text-style>
                            </text>
                            <text-style-def id="ts3">
                                <text-style font="Helvetica Neue" fontSize="64" fontFace="Regular" fontColor="1 1 1 1" alignment="center" shadowColor="0 0 0 0.8" shadowOffset="2 2" shadowBlurRadius="6" />
                            </text-style-def>
                            <adjust-transform position="0 -40.963" />
                        </title>
                    </asset-clip>
                    </spine>
                </sequence>
            </project>
        </event>
    </library>
</fcpxml>
"
`;
